project2/test/test_2_r12.out
Error type 12 at line 15: array indexing with non-integer type expression
