project2/test/test_2_r12.out2
Error type 12 at Line 15: array indexing with non-integer type expression
Error type 5 at Line 15: unmatching type on both sides of assignment
